# salemate-v2

./: CLAUDE.md  MessengerIQ_TechSpec_v3.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/db/: connection.py  queries.py
backend/app/models/: schemas.py
backend/app/routers/: catalog.py  webhooks.py
backend/app/services/: ai_agent.py  conversation.py  embeddings.py  extractor.py
backend/app/utils/: keywords.py
backend/supabase/migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_seed_data.sql
backend/tests/: conftest.py  smoke_test.py  test_ai_agent.py  test_catalog.py  test_config.py  test_config_settings.py  test_conftest_fixtures.py  test_conversation.py  test_embeddings.py  test_extractor.py  test_integration.py  test_schemas.py  test_webhooks.py
docs/: DEPLOYMENT.md
docs/plans/: 2026-03-26-phase-1-foundation.md
